<resources>
    <string name="app_name">CS4514_JLPT_Exam_Helper</string>

    <!-- Onboarding Activity-->
    <string name="skip">Skip</string>
    <string name="login_register">Login / Register</string>

    <!-- Onboarding Title -->
    <string name = "onboarding_title_1">Master Japanese with JLPT Success</string>
    <string name = "onboarding_title_2">Login for a World of Features</string>
    <string name = "onboarding_title_3">Welcome to Your Japanese Learning Journey</string>

    <!-- Onboarding Description -->
    <string name = "onboarding_desc_1">Unlock your potential to learn Japanese effectively and achieve your JLPT goals.</string>
    <string name = "onboarding_desc_2">By logging in, you gain access to a variety of exclusive features that enhance your learning experience.</string>
    <string name = "onboarding_desc_3">Time to learn Japanese! Keep it fun and stay motivated. Have a great experience!</string>

    <!-- Home -->
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="guest">Continues as guest</string>
    <string name="home_description">Master Japanese with JLPT Focus!</string>

    <!-- Sign In -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_message">Don\'t have an account? Sign up now!</string>
    <string name="required">*Required</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="back">Back</string>
    <string name="or">or</string>

    <!-- OTP -->
    <string name="enter_email_description">Enter your email to receive vertification code</string>
    <string name="send_code">Send code</string>
    <string name="enter_otp_description">Enter the OTP sent to</string>

    <!-- Sign Up -->
    <string name="step_counter_1_3">Step 1 of 3</string>
    <string name="step_counter_2_3">Step 2 of 3</string>
    <string name="step_counter_3_3">Step 3 of 3</string>
    <string name="user_name">User Name</string>
    <string name="verify_email">Verify Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="edit_profile_description">Provide the required information to complete the registration.</string>
    <string name="start">Start</string>
    <string name="sign_up_successfully_title">Sign Up Successfully!</string>
    <string name="sign_up_successfully_description">It is time to learn Japanese and master JLPT exam!</string>

    <!-- Reset Password -->
    <string name="reset_password">Reset Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="password_changed_title">Password changed!</string>
    <string name="password_changed_body">Your password has been changed successfully!</string>
    <string name="resend_otp">Did not receive the OTP? Resend OTP</string>
    <string name="reset_password_description">Enter the new password below to change your password</string>
    <string name="reset_password_successfully_title">Password Changed!</string>
    <string name="reset_password_successfully_description">Your password has been changed successfully.</string>

    <!-- Dashboard -->
    <string name="home">Home</string>

    <!-- Home -->
    <string name="beginner">Beginner</string>

    <!-- Beginner -->
    <string name="learning"><u>Learning</u></string>
    <string name="hiragana_katakana"><![CDATA[Hiragana & Katakana]]></string>
    <string name="vocabulary">Vocabulary</string>
    <string name="grammar">Grammar</string>
    <string name="practice">Practice</string>
    <string name="plans">Plans</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>
    <string name="web_articles">Web Articles</string>
    <string name="forum">Forum</string>
    <string name="dictionary">Dictionary</string>
    <string name="completed">Completed</string>
    <string name="dictionary_hint">Search word (e.g., house, いえ)</string>
    <string name="question">Question</string>
    <string name="ask">Ask</string>
    <string name="ask_question">Ask question</string>
    <string name="title">Title</string>
    <string name="type_your_question_here">Type your question here...</string>
    <string name="end">End</string>
    <string name="reply">Reply</string>
    <string name="type_your_reply_here">Type your reply here...</string>
    <string name="next">Next</string>
    <string name="n5">N5</string>
    <string name="quiz">Quiz</string>
    <string name="choose_a_level_to_begin">Choose a level to begin.</string>
    <string name="select_the_correct_answer">Select the correct answer.</string>
    <string name="check">Check</string>
    <string name="you_can_press_the_character_to_hear_its_pronunciation">You can press the character to hear its pronunciation.</string>
    <string name="start_quiz">Start quiz</string>
    <string name="choose_the_jlpt_level">Choose the JLPT Level</string>
    <string name="change_level">Change Level</string>
    <string name="n4">N4</string>
    <string name="n3">N3</string>
    <string name="n2">N2</string>
    <string name="n1">N1</string>
    <string name="generate_study_plan">Generate Study Plan</string>
    <string name="study_plan">Study Plan</string>
    <string name="you_have_not_generate_any_study_plan">You have not generate any study plan.</string>
    <string name="what_is_your_current_jlpt_level">What is your current JLPT Level?</string>
    <string name="no_result">No Result</string>
    <string name="select_your_target_jlpt_level">Select your target JLPT level</string>
    <string name="select_your_target_score">Select your target score.</string>
    <string name="pass_the_jlpt_exam">Pass the JLPT exam</string>
    <string name="pass_the_jlpt_exam_only">Pass the JLPT Exam Only</string>
    <string name="fully_prepare_the_jlpt_exam">Fully prepare the JLPT Exam</string>
    <string name="select_target_score_description">The amount of the study materials are adjusted based on your target score. If you only want to pass the JLPT exam, then only subset of the study materials are included in the study plan</string>
    <string name="select_jlpt_exam_date">Select the date you will take the JLPT Exam</string>
    <string name="select_daily_study_time_description">How much time you can spend on learning the study materials?</string>
    <string name="_5_minutes">5 minutes</string>
    <string name="_10_minutes">10 minutes</string>
    <string name="_15_minutes">15 minutes</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="warning_bad_study_plan">
        The quality of the study plan is not good. It may be due to the short study periods or heavy workload.
        Please try to generate a new study plan with longer study periods and lower workload.</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old Password</string>
    <string name="your_study_plan_is_generating_it_may_takes_up_to_minutes_for_generation">Your study plan is generating. It may takes up to minutes for generation.</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="setting">Setting</string>
    <string name="current_password">Current Password</string>
    <string name="search_android_imeoptions">Search... android:imeOptions=</string>
    <string name="search">Search...</string>


</resources>