<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_select_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="30dp"
        android:text="@string/select_your_target_jlpt_level"
        android:gravity="center"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/option_N5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="40dp"
        android:background="@drawable/gradient_3"
        android:textColor="@color/white"
        android:text="@string/n5"
        android:gravity="center"
        android:padding="15dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/text_select_level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_goneMarginTop="50dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/option_N4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="40dp"
        android:background="@drawable/gradient_3"
        android:textColor="@color/white"
        android:text="@string/n4"
        android:gravity="center"
        android:padding="15dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/option_N5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_goneMarginTop="50dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/option_N3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="40dp"
        android:background="@drawable/gradient_3"
        android:textColor="@color/white"
        android:text="@string/n3"
        android:gravity="center"
        android:padding="15dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/option_N4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_goneMarginTop="50dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/option_N2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="40dp"
        android:background="@drawable/gradient_3"
        android:textColor="@color/white"
        android:text="@string/n2"
        android:gravity="center"
        android:padding="15dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/option_N3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_goneMarginTop="50dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/option_N1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="40dp"
        android:background="@drawable/gradient_3"
        android:textColor="@color/white"
        android:text="@string/n1"
        android:gravity="center"
        android:padding="15dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/option_N2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_goneMarginTop="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>