<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_select_target_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="30dp"
        android:text="@string/select_your_target_score"
        android:gravity="center"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_select_target_score_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/select_target_score_description"
        android:gravity="center"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/text_select_target_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/option_pass_exam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="40dp"
        android:background="@drawable/gradient_4"
        android:textColor="@color/black"
        android:text="@string/pass_the_jlpt_exam_only"
        android:gravity="center"
        android:padding="15dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/text_select_target_score_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_goneMarginTop="50dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/option_full_preparation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="40dp"
        android:background="@drawable/gradient_4"
        android:textColor="@color/black"
        android:text="@string/fully_prepare_the_jlpt_exam"
        android:gravity="center"
        android:padding="15dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/option_pass_exam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_goneMarginTop="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>